--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <div class="changeBox">
       <button id="plusPlusButton2" onclick="plusPlusButton(2)">++</button>
       <button id="plusButton2" onclick="plusButton(2)">+</button>
-      <button id="vergleichsButton2" onclick="playSound(refFreq, dBToGain(doubleDB), duration)">Doppelt so laut?</button>
+      <button id="vergleichsButton2" onclick="playSound(refFreq, dBToGain(doubleDB), duration)">Doppelt so
+        laut?</button>
       <button id="minusButton2" onclick="minusButton(2)">-</button>
       <button id="minusMinusButton2" onclick="minusMinusButton(2)">--</button>
     </div>
@@ -59,7 +60,10 @@
       </div>
     </div>
 
-    <img src="lautheit.jpg">
+    <figure>
+      <img src="lautheit.jpg">
+      <figcaption>https://de.wikipedia.org/wiki/Lautheit#/media/Datei:Akustik_phon2sone3.jpg</figcaption>
+    </figure>
   </div>
 
 
